<resources>
    <string name="app_name">Qp</string>
    <string name="textview">TextView</string>
    <string name="pin">pin</string>
    <string name="button">Button</string>
    <string name="usn">usn</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="name">Name</string>
    <string name="mail_id">Mail_id</string>
    <string name="USN">USN</string>
    <string name="PIN">PIN</string>
    <string name="confirm_pin">confirm PIN</string>
    <string name="department">Department</string>
    <string name="done">Button</string>
    <string name="register">Register</string>
    <string name="title_activity_user__stud">User_STUD</string>
    <string name="welcome_user">Welcome User</string>
    <string name="title_activity_user">user</string>
    <string name="title_activity_quesionpaper">Quesionpaper</string>
    <string name="title_activity_user1">user1</string>
    <string name="title_activity_user2">user2</string>
    <string name="add_files">Add files</string>
    <string name="download_files">Download files</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_upload">Upload</string>
    <string name="request">string</string>
    <string name="sem">sem</string>
    <string name="enter_a_name_for_your_file">enter_a_name_for_your_file</string>
    <string name="upload_pdf">upload_pdf</string>
    <string name="no_file_selected">no_file_selected</string>
    <string name="view_uploads">view_uploads</string>
    <string name="staff">Staff</string>
    <string name="dept_sem_subject_cie_no">dept/sem/subject/cie_no</string>
    <string name="fetch_files">fetch_files</string>
    <string name="dept">dept</string>
    <string name="subject">subject</string>
    <string name="dept_sem_sub_name_of_file">dept/sem/sub/name_of_file</string>
</resources>
