<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
tools:context="com.example.channabasaawa.qp.Main3Activity">

    <EditText
        android:id="@+id/editTextFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonUploadFile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp"
        android:hint="@string/dept_sem_subject_cie_no"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

<Button
    android:id="@+id/buttonUploadFile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/upload_pdf"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:id="@+id/linearLayout2">


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>

<TextView
    android:id="@+id/textViewStatus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/buttonUploadFile"
    android:layout_marginTop="62dp"
    android:text="@string/no_file_selected"
    android:textAlignment="center"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

<TextView
    android:id="@+id/textViewUploads"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:text="@string/view_uploads"
    android:textAlignment="center"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    android:textColor="@color/colorPrimaryDark"
    android:layout_below="@+id/textViewStatus"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="47dp" />
</RelativeLayout>
